# dartlab-desktop

./: .gitignore  Cargo.toml  README.md  TECH_SPEC.md  build.rs
.github/workflows/: release.yml
src/: logger.rs  main.rs  net.rs  ollama.rs  paths.rs  runner.rs  selfUpdate.rs  setup.rs  shortcuts.rs  state.rs  ui.rs  updater.rs
