[package]
name = "dartlab-desktop"
version = "0.1.0"
edition = "2024"
description = "DartLab AI Desktop Launcher for Windows"
license = "MIT"
repository = "https://github.com/eddmpython/dartlab-desktop"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1"
dirs = "6"
open = "5"

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
