[package]
name = "dartlab-desktop"
version = "0.3.2"
edition = "2024"
description = "DartLab AI Desktop Launcher for Windows"
license = "MIT"
repository = "https://github.com/eddmpython/dartlab-desktop"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1"
dirs = "6"
tao = "0.33"
wry = "0.49"
image = { version = "0.25", default-features = false, features = ["ico"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
