[package]
name = "dartlab-desktop"
version = "0.3.14"
edition = "2024"
description = "DartLab AI Desktop Launcher for Windows"
license = "MIT"
repository = "https://github.com/eddmpython/dartlab-desktop"

[dependencies]
ureq = "3"
serde_json = "1"
dirs = "6"
tao = "0.33"
wry = "0.49"
zip = { version = "2", default-features = false, features = ["deflate"] }
png = "0.17"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Security"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
